gccida/c2/start_init
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5547:25: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
v4->constructor_stack = constructor_stack_0; 
                        ^~~~~~~~~~~~~~~~~~~
                        constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5548:31: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
v4->constructor_range_stack = constructor_range_stack_0; 
                              ^~~~~~~~~~~~~~~~~~~~~~~~~
                              constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5550:16: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
v4->spelling = spelling_0; 
               ^~~~~~~~~~
               spelling
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5555:12: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
v4->next = initializer_stack_0; 
           ^~~~~~~~~~~~~~~~~~~
           initializer_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5556:1: error: use of undeclared identifier 'initializer_stack_0'; did you mean 'initializer_stack'?
initializer_stack_0 = v4; 
^~~~~~~~~~~~~~~~~~~
initializer_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5059:27: note: 'initializer_stack' declared here
struct initializer_stack *initializer_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5582:1: error: use of undeclared identifier 'constructor_stack_0'; did you mean 'constructor_stack'?
constructor_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~
constructor_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5021:27: note: 'constructor_stack' declared here
struct constructor_stack *constructor_stack;
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5583:1: error: use of undeclared identifier 'constructor_range_stack_0'; did you mean 'constructor_range_stack'?
constructor_range_stack_0 = 0LL; 
^~~~~~~~~~~~~~~~~~~~~~~~~
constructor_range_stack
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5036:33: note: 'constructor_range_stack' declared here
struct constructor_range_stack *constructor_range_stack;
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5587:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = 0LL; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:5595:1: error: use of undeclared identifier 'spelling_0'; did you mean 'spelling'?
spelling_0 = v12 + 1; 
^~~~~~~~~~
spelling
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/c-typeck.c:4491:25: note: 'spelling' declared here
static struct spelling *spelling;       /* Next stack element (unused).  */
                        ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_init/src/obj/c-typeck.o] Error 1
